[project]
name = "churro-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.29.4",
    "mlx-vlm>=0.3.7",
    "pillow>=12.0.0",
    "rich>=14.2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "typer>=0.20.0",
]
